# automated-research-report-generation

./: .env  .gitignore  Dockerfile  pyproject.toml  requirements.txt  user.db
notebook/: test.ipynb
research_and_analysts/api/: main.py
research_and_analysts/api/routes/: report_routes.py
research_and_analysts/api/services/: report_service.py
research_and_analysts/backend_server/: workflow.py
research_and_analysts/config/: configuration.yaml
research_and_analysts/database/: db_config.py
research_and_analysts/exceptions/: custom_exception.py
research_and_analysts/logger/: custom_logger.py
research_and_analysts/prompt_lib/: prompts.py
research_and_analysts/utils/: config_loader.py  model_loader.py
research_and_analysts/workflows/: interview_workflow.py  report_generation_workflow.py
