[build-system]
requires = ["setuptools>=68"]  # PEP 660 editable install support
build-backend = "setuptools.build_meta"

[project]
name = "automated-research-report-generation"
version = "0.1.0"
description = "Automated research and report generation framework using LLMs"
readme = "README.md"
requires-python = ">=3.11"

# ✅ Main dependencies
dependencies = [
    "ipykernel>=6.30.1",
    "langchain-community>=0.3.30",
    "langchain-core>=0.3.78",
    "langchain-google-genai==2.1.8",
    "langchain-groq==0.3.6",
    "langchain-openai==0.3.32",
    "langgraph>=0.6.8",
    "structlog==25.4.0",
    "tavily-python>=0.7.12",
    "wikipedia>=1.4.0",
]


authors = [{ name = "Mohammed Munavar" }]
license = { text = "Proprietary" }

[tool.setuptools.packages.find]
where = ["research_and_analysts"]
include = ["research_and_analysts*"]
